--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-
+    <nav>
+      <a href="/drones">List of Drones</a>
+      <a href="/drones/create">New Drone</a>
+    </nav>
     {{{body}}}
 
     <script src="/javascripts/script.js"></script>
