--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,25 @@
 <h2>Available drones</h2>
+{{#each result}}
+
+<ul>
+
+<li>
+    <p>
+Name: {{this.name}}
+
+    </p>
+    <p>
+Propellers: {{this.propellers}}
+        
+    </p>
+    <p>
+Speed: {{this.maxSpeed}}
+        
+    </p>
+    <p>
+        <a href='/drones/{{this._id}}/edit'>Update Info</a>
+    </p>
+</li>
+
+</ul>
+{{/each}}
