--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,6 +1,6 @@
 <h2>Update the drone</h2>
 
-<form method="POST" action="/drones/create">
+<form method="POST" action="/drones/{{result._id}}/edit">
 <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Name</label>
     <input value={{result.name}} name="droneName" type="text" class="form-control" id="exampleInputEmail1">
