--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,28 +1,20 @@
 <h2>Available drones</h2>
 {{#each result}}
+<div class="row">
+<div class="col-sm-6">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Name: {{this.name}}</h5>
+            <p class="card-text">Name: {{this.name}}</p>
+            <p class="card-text">Propellers: {{this.propellers}}</p>
+            <p class="card-text">Speed: {{this.maxSpeed}}</p>
+            <a href='/drones/{{this._id}}/edit' class="btn btn-primary">Update Info</a>
+            <form action="/drones/{{this._id}}/delete" method="POST">
+                <button class="btn btn-primary">Delete</button>
+            </form>
+        </div>
+    </div>
+</div>
 
-<ul>
-
-<li>
-    <p>
-Name: {{this.name}}
-
-    </p>
-    <p>
-Propellers: {{this.propellers}}
-        
-    </p>
-    <p>
-Speed: {{this.maxSpeed}}
-        
-    </p>
-    <p>
-        <a href='/drones/{{this._id}}/edit'>Update Info</a>
-    </p>
-    <form action="/drones/{{this._id}}/delete" method="POST">
-    <button >Delete</button>
-    </form>
-</li>
-
-</ul>
+</div>
 {{/each}}
